force-app/main/default/objects/Custom_Virtual_Deployment__c/Custom_Virtual_Deployment__c.object-meta.xml
<CustomObject>
    <label>Custom Virtual Deployment</label>
    <nameField>
        <displayFormat>CVD-{00000}</displayFormat>
        <label>Custom Virtual Deployment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Virtual Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>