force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/CNF_Management_Tooling__c.field-meta.xml
<CustomField>
    <fullName>CNF_Management_Tooling__c</fullName>
    <description>CNF Management Tooling</description>
    <label>CNF Management Tooling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>