force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments for when the Status equals Needs More Information</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>