force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Configuration_Method__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Method__c</fullName>
    <description>Configuration Requirements</description>
    <label>Configuration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated via CLI</fullName>
            </value>
            <value>
                <fullName>Integrated e.g. via EMS</fullName>
            </value>
            <value>
                <fullName>ConfigMaps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>