force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Customer_Infrastructure_Integration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Infrastructure_Integration__c</fullName>
    <description>Customer Infrastructure Integration</description>
    <label>Customer Infrastructure Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HashiCorp Vault via JAVA API</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>