force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Datastore__c.field-meta.xml
<CustomField>
    <fullName>Datastore__c</fullName>
    <description>Datastore Requirements</description>
    <label>Datastore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View-db</fullName>
            </value>
            <value>
                <fullName>Cloud-db</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>