force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Deployment_Level__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Level__c</fullName>
    <description>Level required for deployment</description>
    <label>Deployment Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Trial and Buy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>