force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Deployment_Model__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Model__c</fullName>
    <description>Model Required for Deployment</description>
    <label>Deployment Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VM</fullName>
            </value>
            <value>
                <fullName>VNF</fullName>
            </value>
            <value>
                <fullName>CNF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>