force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Deployment_Phase_Support__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Phase_Support__c</fullName>
    <description>Support Requirements</description>
    <label>Deployment Phase Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>During Onboarding</fullName>
            </value>
            <value>
                <fullName>During LCM</fullName>
            </value>
            <value>
                <fullName>During Operation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>