force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Engineering_Cost_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Cost_Analysis__c</fullName>
    <description>Engineering Ops’ Cost Analysis</description>
    <label>Engineering Cost Analysis</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>