force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/HA_Resiliency__c.field-meta.xml
<CustomField>
    <fullName>HA_Resiliency__c</fullName>
    <description>High-Availability &amp; Resiliency Required</description>
    <label>HA &amp; Resiliency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECC</fullName>
            </value>
            <value>
                <fullName>SIF</fullName>
            </value>
            <value>
                <fullName>Geo-Redundant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>