force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Lifecycle_Operations__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Operations__c</fullName>
    <description>Lifecycle Operation Required</description>
    <label>Lifecycle Operations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activate/Deactive</fullName>
            </value>
            <value>
                <fullName>Auto-Heal</fullName>
            </value>
            <value>
                <fullName>Auto-Scale</fullName>
            </value>
            <value>
                <fullName>Heal</fullName>
            </value>
            <value>
                <fullName>Instantiate</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Restore</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>