force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_by_Date__c</fullName>
    <description>The date the custom virtual deployment is needed by.</description>
    <label>Expected Deployment Date</label>
    <type>Date</type>
</CustomField>