force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/OSS_Integration_and_APIs__c.field-meta.xml
<CustomField>
    <fullName>OSS_Integration_and_APIs__c</fullName>
    <description>OSS Integration and APIs</description>
    <label>OSS Integration and APIs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMS via CLI</fullName>
            </value>
            <value>
                <fullName>Logging</fullName>
            </value>
            <value>
                <fullName>Tracing</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Performance Reports</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>