force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_CNF_Management_Tooling__c.field-meta.xml
<CustomField>
    <fullName>Other_CNF_Management_Tooling__c</fullName>
    <description>Other CNF Management Tooling</description>
    <label>Other CNF Management Tooling</label>
    <length>150</length>
    <type>Text</type>
</CustomField>