force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Other_Configuration__c</fullName>
    <description>Other Configuration Requirements</description>
    <label>Other Configuration</label>
    <length>150</length>
    <type>Text</type>
</CustomField>