force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Datastore__c.field-meta.xml
<CustomField>
    <fullName>Other_Datastore__c</fullName>
    <description>Other Datastore Requirements</description>
    <label>Other Datastore</label>
    <length>150</length>
    <type>Text</type>
</CustomField>