force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_HA__c.field-meta.xml
<CustomField>
    <fullName>Other_HA__c</fullName>
    <description>Other High-Availability and Resiliency Requirements</description>
    <label>Other HA</label>
    <length>150</length>
    <type>Text</type>
</CustomField>