force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Other_Infrastructure__c</fullName>
    <description>Other Customer Infrastructure Integration</description>
    <label>Other Infrastructure</label>
    <length>150</length>
    <type>Text</type>
</CustomField>