force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Level__c.field-meta.xml
<CustomField>
    <fullName>Other_Level__c</fullName>
    <description>Other Deployment Level Required</description>
    <label>Other Level</label>
    <length>150</length>
    <type>Text</type>
</CustomField>