force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Other_Lifecycle__c</fullName>
    <description>Other Lifecycle Operation Required</description>
    <label>Other Lifecycle</label>
    <length>150</length>
    <type>Text</type>
</CustomField>