force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Model__c.field-meta.xml
<CustomField>
    <fullName>Other_Model__c</fullName>
    <description>Other Deployment Model Required</description>
    <label>Other Model</label>
    <length>150</length>
    <type>Text</type>
</CustomField>