force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_OSS__c.field-meta.xml
<CustomField>
    <fullName>Other_OSS__c</fullName>
    <description>Other OSS Integration and APIs</description>
    <label>Other OSS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>