force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_Support__c</fullName>
    <description>Other Support Requirements</description>
    <label>Other Support</label>
    <length>150</length>
    <type>Text</type>
</CustomField>