force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_Virtualization__c.field-meta.xml
<CustomField>
    <fullName>Other_Virtualization__c</fullName>
    <description>Other Virtualization Infrastructure and Tooling Used</description>
    <label>Other Virtualization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>