force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Other_VNF_Management_Tooling__c.field-meta.xml
<CustomField>
    <fullName>Other_VNF_Management_Tooling__c</fullName>
    <description>Other VNF Management Tooling Used</description>
    <label>Other VNF Management Tooling</label>
    <length>150</length>
    <type>Text</type>
</CustomField>