force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Output_Cost_man_days__c.field-meta.xml
<CustomField>
    <fullName>Output_Cost_man_days__c</fullName>
    <label>Output Cost (man-days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>