force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Output_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Output_Pricing__c</fullName>
    <description>PLM’s final output on Pricing for the Custom Virtual Deployment</description>
    <label>Output Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>