force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Pricing_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Discussion__c</fullName>
    <description>PLM can explain any special considerations and/or conditions that apply to the Output Pricing</description>
    <label>Pricing Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>