force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Custom Virtual Deployment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Needs More Information</fullName>
            </value>
            <value>
                <fullName>Estimation</fullName>
            </value>
            <value>
                <fullName>CVD Estimate Complete</fullName>
            </value>
            <value>
                <fullName>Pricing Provided to Sales</fullName>
            </value>
            <value>
                <fullName>Awaiting Acceptance</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Parent Sales-Opp Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>