force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Summary of the request</description>
    <inlineHelpText>Please provide a short one-line title to serve as a descriptive handle for this request.</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>