force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/Virtualization_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Virtualization_Infrastructure__c</fullName>
    <description>Virtualization infrastructure used</description>
    <label>Virtualization Infrastructure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bare-metal</fullName>
            </value>
            <value>
                <fullName>Openstack</fullName>
            </value>
            <value>
                <fullName>VMware NFV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>