force-app/main/default/objects/Custom_Virtual_Deployment__c/fields/VNF_Management_Tooling__c.field-meta.xml
<CustomField>
    <fullName>VNF_Management_Tooling__c</fullName>
    <description>VNF Management Tooling</description>
    <label>VNF Management Tooling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBAM</fullName>
            </value>
            <value>
                <fullName>Cisco NSO/ECM</fullName>
            </value>
            <value>
                <fullName>Cloudify</fullName>
            </value>
            <value>
                <fullName>Ericsson UNICA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>