force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required</fullName>
    <active>true</active>
    <description>Comments are required when the Status equals Needs More Information</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Status__c  , &quot;Needs More Information&quot;),
ISBLANK( Comments__c  )
)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Required when the Status equals Needs More Information</errorMessage>
</ValidationRule>