force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Configuration_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Configuration_is_Required</fullName>
    <active>true</active>
    <description>Other Configuration is required when Other is selected for Configuration Requirements</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Configuration_Method__c  , &quot;Other&quot;),
ISBLANK(  Other_Configuration__c  )
)</errorConditionFormula>
    <errorDisplayField>Other_Configuration__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Configuration Requirements</errorMessage>
</ValidationRule>