force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Datastore_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Datastore_is_Required</fullName>
    <active>true</active>
    <description>Other Lifecycle is required when Other is selected for Datastore Requirements</description>
    <errorConditionFormula>AND(
ISPICKVAL(   Datastore__c  , &quot;Other&quot;),
ISBLANK(   Other_Datastore__c   )
)</errorConditionFormula>
    <errorDisplayField>Other_Datastore__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Datastore Requirements</errorMessage>
</ValidationRule>