force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_HA_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_HA_is_Required</fullName>
    <active>true</active>
    <description>Other HA is required when Other is selected for HA &amp; Resiliency Required</description>
    <errorConditionFormula>AND(
INCLUDES(HA_Resiliency__c  , &quot;Other&quot;),
ISBLANK(  Other_HA__c  )
)</errorConditionFormula>
    <errorDisplayField>Other_HA__c</errorDisplayField>
    <errorMessage>Required when Other is selected for HA &amp; Resiliency Required</errorMessage>
</ValidationRule>