force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Infrastructure_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Infrastructure_is_Required</fullName>
    <active>true</active>
    <description>Other Configuration is required when Other is selected for Customer Infrastructure Integration</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Customer_Infrastructure_Integration__c  , &quot;Other&quot;),
ISBLANK(   Other_Infrastructure__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Infrastructure__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Customer Infrastructure Integration</errorMessage>
</ValidationRule>