force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Level_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Level_is_Required</fullName>
    <active>true</active>
    <description>Other Level is required when Other is selected for Deployment Level Required</description>
    <errorConditionFormula>AND(
INCLUDES(  Deployment_Level__c  , &quot;Other&quot;),
ISBLANK(  Other_Level__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Level__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Deployment Level Required</errorMessage>
</ValidationRule>