force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Lifecycle_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Lifecycle_is_Required</fullName>
    <active>true</active>
    <description>Other Lifecycle is required when Other is selected for Lifecycle Operation Required</description>
    <errorConditionFormula>AND(
INCLUDES(  Lifecycle_Operations__c  , &quot;Other&quot;),
ISBLANK(  Other_Lifecycle__c   )
)</errorConditionFormula>
    <errorDisplayField>Other_Lifecycle__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Lifecycle Operation Required</errorMessage>
</ValidationRule>