force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Model_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Model_is_Required</fullName>
    <active>true</active>
    <description>Other Model is required when Other is selected for Deployment Model Required</description>
    <errorConditionFormula>AND(
ISPICKVAL(   Deployment_Model__c  , &quot;Other&quot;),
ISBLANK(   Other_Model__c  )
)</errorConditionFormula>
    <errorDisplayField>Other_Model__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Deployment Model Required</errorMessage>
</ValidationRule>