force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Support_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Support_is_Required</fullName>
    <active>false</active>
    <description>Other Support is required when Other is selected for Support Requirements</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Deployment_Phase_Support__c  , &quot;Other&quot;),
ISBLANK(  Other_Support__c  )
)</errorConditionFormula>
    <errorDisplayField>Other_Support__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Support Requirements</errorMessage>
</ValidationRule>