force-app/main/default/objects/Custom_Virtual_Deployment__c/validationRules/Other_Virtualization_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Virtualization_is_Required</fullName>
    <active>true</active>
    <description>Other Virtualization is required when Other is selected for Virtualization Infrastructure and Tooling</description>
    <errorConditionFormula>AND(
ISPICKVAL(    Virtualization_Infrastructure__c  , &quot;Other&quot;),
ISBLANK(    Other_Virtualization__c   )
)</errorConditionFormula>
    <errorDisplayField>Other_Virtualization__c</errorDisplayField>
    <errorMessage>Required when Other is selected for Virtualization Infrastructure &amp; Tooling</errorMessage>
</ValidationRule>